refactor: update Blog page

--- a/FilmBlog/FilmBlog.csproj
+++ b/FilmBlog/FilmBlog.csproj
@@ -92,8 +92,10 @@
     <Content Include="web\css\bootstrap.css" />
     <Content Include="web\css\style.css" />
     <Content Include="web\images\avatar.png" />
+    <Content Include="web\images\BreakingBad.jpg" />
     <Content Include="web\images\food.jpg" />
     <Content Include="web\images\icon3.png" />
+    <Content Include="web\images\lacasadepapel.jfif" />
     <Content Include="web\images\logo.jpg" />
     <Content Include="web\images\man.jpg" />
     <Content Include="web\images\more.png" />
@@ -101,6 +103,7 @@
     <Content Include="web\images\post2.jpg" />
     <Content Include="web\images\post3.jpg" />
     <Content Include="web\images\search.png" />
+    <Content Include="web\images\StrangerThings.jpg" />
     <Content Include="web\index.html" />
     <Content Include="web\js\easing.js" />
     <Content Include="web\js\jquery.min.js" />
