--- a/FilmBlog/FilmBlog.csproj
+++ b/FilmBlog/FilmBlog.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Content Include="BlogDetal.aspx" />
     <Content Include="Default.aspx" />
+    <Content Include="Elaqe.aspx" />
     <Content Include="Haqqimda.aspx" />
     <Content Include="Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -128,6 +129,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Elaqe.aspx.cs">
+      <DependentUpon>Elaqe.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Elaqe.aspx.designer.cs">
+      <DependentUpon>Elaqe.aspx</DependentUpon>
     </Compile>
     <Compile Include="Haqqimda.aspx.cs">
       <DependentUpon>Haqqimda.aspx</DependentUpon>
